# merge_request_cli

./: .gitignore  Cargo.toml  Config.example.toml  README.md  package-lock.json  package.json
src/: main.rs
src/docs/: users.json
src/libs/: BranchCompleter.rs  Config.rs  GitFunctions.rs  Question.rs  Utils.rs  mod.rs
src/local-server/: server.js
src/questionnaire/: QuestionnaireInitial.rs  QuestionnaireMain.rs  mod.rs
src/requests/: Issues.rs  MergeRequest.rs  Profile.rs  Reviewers.rs  mod.rs  teste.rs
